# nepali-news-rag-chatbot

./: .env.example  .gitignore  README.md  pyproject.toml
app/: components.py  example_questions.py  main.py
docs/: design.md
evaluation/: benchmark_questions.json
evaluation/results/: report_readme_20260428.json
nepali_news_rag/: __init__.py  config.py  data_prep.py  database.py  embeddings.py  guardrails.py  index_builder.py  language_detector.py  llm.py  pipeline.py  prompts.py  retriever.py  router.py  sql_generator.py
notebook/: data_prep.ipynb  embed.ipynb  rag_chain.ipynb
notebooks/: 01_ingest_companies.ipynb  01_ingest_news.ipynb  02_ingest_price_history.ipynb  02_prepare_chunks.ipynb  03_build_vector_store.ipynb  03_ingest_fundamentals.ipynb  04_ingest_ipos.ipynb  04_retrieval_smoke_test.ipynb  05_guardrails_eval.ipynb  05_ingest_news.ipynb  06_evaluation.ipynb
scripts/: app.py  build_db.py  data_prep.py  doctor.py  embed.py  evaluate_benchmark.py  rag_chain.py  refresh_news.py  refresh_prices.py  run_app.py  smoke_check.py
tests/: test_guardrails.py  test_llm_provider_factory.py  test_pipeline_contract.py
