[project]
name = "nepali-news-rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "faiss-cpu>=1.13.2",
    "huggingface-hub<1.0.0",
    "langchain>=1.2.7",
    "langchain-classic>=1.0.1",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-text-splitters>=1.1.0",
    "langdetect>=1.0.9",
    "llama-cpp-python>=0.3.0",
    "sentence-transformers>=5.2.2",
    "streamlit>=1.53.1",
    "transformers<5.0.0",
]
